update work - notes